Install and use Pundit for authorization

--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -4,8 +4,10 @@ one:
   name: MyString
   context: expense
   icon: MyString
+  user: one
 
 two:
   name: MyString
   context: expense
   icon: MyString
+  user: one
