--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: Category 1
   context: expense
   icon: MyString
   user: one
 
 two:
-  name: MyString
+  name: Category 2
   context: expense
   icon: MyString
   user: one
