--- a/test/fixtures/wallets.yml
+++ b/test/fixtures/wallets.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: Wallet 1
   user: one
 
 two:
-  name: MyString
+  name: Wallet 2
   user: one
