Fix category fixtures
Icon names should be identical now.

--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -3,11 +3,11 @@
 one:
   name: Category 1
   context: expense
-  icon: MyString
+  icon: baby
   user: one
 
 two:
   name: Category 2
   context: expense
-  icon: MyString
+  icon: bank
   user: one
