--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,6 +6,8 @@
 #
 one:
   email: ali@example.com
+  encrypted_password: <%= User.new.send(:password_digest, '12345678') %>
 
 two:
   email: veli@example.com
+  encrypted_password: <%= User.new.send(:password_digest, '12345678') %>
